# document-copilot-final

backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_documents_and_chunks.py  003_message_citations.py
backend/app/: config.py  main.py
backend/app/api/: chat.py  citations.py
backend/app/assistant/: agent.py  deps.py  instructions.md  outputs.py
backend/app/chat/: messages.py  orchestrator.py  schemas.py  streaming.py
backend/app/database/: chats.py  models.py  session.py
backend/app/grounding/: validator.py
backend/app/retrieval/: citation_context.py  embedding.py  fusion.py  queries.py  retriever.py  schemas.py
backend/ingest/: __init__.py  conversion.py  embeddings.py  filings.py  pipeline.py  repository.py  run.py  tables.py
backend/tests/: conftest.py
backend/tests/auth/: test_me.py
backend/tests/chat/: test_orchestrator.py  test_orchestrator_integration.py  test_stream.py  test_streaming.py  test_thread_history.py  test_threads.py
backend/tests/grounding/: test_validator.py
backend/tests/ingest/: test_conversion.py  test_embeddings.py  test_filings.py  test_pipeline.py  test_tables.py
backend/tests/retrieval/: test_citation_context.py  test_citation_route.py  test_fusion.py  test_retriever.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthLayout.tsx  ErrorAlert.tsx  PublicRoute.tsx
frontend/src/components/chat/: ChatEmptyState.tsx  ChatPanel.tsx  CitationList.tsx  PassageSheet.tsx  RefusalNotice.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: api.ts  chatMessageParts.ts  errors.ts
frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx  SignUp.tsx
